MB-43374: Disallow " in connection id

As part of implementing MB-41183 we split the sockname and peername
into a JSON object, but the peername was already used as the
default connection identifier (until the client set one).

This patch restore the default value of the CID, and disallow
use of " in the connection id

Change-Id: I52e4219158c189077696a859473a2265e177ece3
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/142509
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>